--- a/app/page.module.css
+++ b/app/page.module.css
@@ -23,7 +23,7 @@
   margin-bottom: 1rem;
 }
 
-@media (max-width: 1000px){
+@media (max-width: 1100px){
   .Hero_Container{
     flex-direction: column;
   }
